--- a/views/base.pug
+++ b/views/base.pug
@@ -4,6 +4,7 @@ html
     block head
       meta(charset='UTF-8')
       meta(name='viewport' content='width=device-width, initial-scale=1.0')
+      meta(http-equiv='Content-Security-Policy' content="default-src 'self'; style-src 'self' https://fonts.googleapis.com")
       link(rel='stylesheet' href='/css/style.css')
       link(rel='shortcut icon' type='image/png' href='/img/favicon.png')
       link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
@@ -20,7 +21,7 @@ html
     // FOOTER
     include _footer
 
-    //- script(src='/js/axios.min.js')
+    script(src='/js/axios.min.js')
     //- //- script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js')
     //- script(src='/js/mapbox.js')
     //- script(src='/js/login.js')
