--- a/views/base.pug
+++ b/views/base.pug
@@ -8,7 +8,6 @@ html
       link(rel='stylesheet' href='/css/style.css')
       link(rel='shortcut icon' type='image/png' href='/img/favicon.png')
       link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
-      script(src='https://js.stripe.com/v3/')
       title Natours | #{title}
 
   body
@@ -22,8 +21,9 @@ html
     // FOOTER
     include _footer
 
+    script(src='https://js.stripe.com/v3/')
     script(src='/js/axios.min.js')
-    //- //- script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js')
     //- script(src='/js/mapbox.js')
     //- script(src='/js/login.js')
     script(src='/js/bundle.js')
